--- a/src/pages/medier.astro
+++ b/src/pages/medier.astro
@@ -22,8 +22,8 @@ import Dropdown from "../components/ui/Dropdown.astro";
         >
       </section>
       <section class="doublearticlecard">
-        <a href="/specificarticlepage.html"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
-        <a href="/specificarticlepage.html"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
+        <a href="/specificarticlepage.html"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.webp" alt="To piger med forskellige kropstyper" /></a>
+        <a href="/specificarticlepage.html"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.webp" alt="To hænder: én holder en banen og en anden en dildo" /></a>
       </section>
       <div class="medier-podcast-section">
         <a href="/specificarticlepage.html"><img src="/images/articleimages/podcastimage.webp" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber" /></a>
@@ -37,8 +37,8 @@ import Dropdown from "../components/ui/Dropdown.astro";
           <a class="hoverstate" href="#"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?" /></a>
         </section>
         <section class="double-articlecard-second">
-          <a href="/specificarticlepage.html"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
-          <a href="/specificarticlepage.html"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
+          <a href="/specificarticlepage.html"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.webp" alt="To piger med forskellige kropstyper" /></a>
+          <a href="/specificarticlepage.html"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.webp" alt="To hænder: én holder en banen og en anden en dildo" /></a>
         </section>
       </div>
       <div class="medier-podcast-section">
@@ -53,8 +53,8 @@ import Dropdown from "../components/ui/Dropdown.astro";
           <a class="hoverstate" href="/specificarticlepage.html"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?" /></a>
         </section>
         <section class="double-articlecard-second">
-          <a href="/specificarticlepage.html"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
-          <a href="/specificarticlepage.html"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
+          <a href="/specificarticlepage.html"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.webp" alt="To piger med forskellige kropstyper" /></a>
+          <a href="/specificarticlepage.html"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.webp" alt="To hænder: én holder en banen og en anden en dildo" /></a>
         </section>
       </div>
       <div class="medier-podcast-section">
@@ -69,8 +69,8 @@ import Dropdown from "../components/ui/Dropdown.astro";
           <a class="hoverstate" href="/specificarticlepage.html"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?" /></a>
         </section>
         <section class="double-articlecard-second">
-          <a href="/specificarticlepage.html"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
-          <a href="/specificarticlepage.html"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
+          <a href="/specificarticlepage.html"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.webp" alt="To piger med forskellige kropstyper" /></a>
+          <a href="/specificarticlepage.html"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.webp" alt="To hænder: én holder en banen og en anden en dildo" /></a>
         </section>
       </div>
       <div class="medier-podcast-section">
@@ -85,8 +85,8 @@ import Dropdown from "../components/ui/Dropdown.astro";
           <a class="hoverstate" href="/specificarticlepage.html"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?" /></a>
         </section>
         <section class="double-articlecard-second">
-          <a href="/specificarticlepage.html"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
-          <a href="/specificarticlepage.html"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
+          <a href="/specificarticlepage.html"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.webp" alt="To piger med forskellige kropstyper" /></a>
+          <a href="/specificarticlepage.html"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.webp" alt="To hænder: én holder en banen og en anden en dildo" /></a>
         </section>
       </div>
       <div class="medier-podcast-section">
@@ -101,8 +101,8 @@ import Dropdown from "../components/ui/Dropdown.astro";
           <a class="hoverstate" href="/specificarticlepage.html"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?" /></a>
         </section>
         <section class="double-articlecard-second">
-          <a href="/specificarticlepage.html"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
-          <a href="/specificarticlepage.html"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
+          <a href="/specificarticlepage.html"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.webp" alt="To piger med forskellige kropstyper" /></a>
+          <a href="/specificarticlepage.html"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.webp" alt="To hænder: én holder en banen og en anden en dildo" /></a>
         </section>
       </div>
       <div class="medier-podcast-section">
@@ -117,8 +117,8 @@ import Dropdown from "../components/ui/Dropdown.astro";
           <a class="hoverstate" href="/specificarticlepage.html"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?" /></a>
         </section>
         <section class="double-articlecard-second">
-          <a href="/specificarticlepage.html"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
-          <a href="/specificarticlepage.html"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
+          <a href="/specificarticlepage.html"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.webp" alt="To piger med forskellige kropstyper" /></a>
+          <a href="/specificarticlepage.html"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.webp" alt="To hænder: én holder en banen og en anden en dildo" /></a>
         </section>
       </div>
       <div class="medier-podcast-section">
@@ -133,8 +133,8 @@ import Dropdown from "../components/ui/Dropdown.astro";
           <a class="hoverstate" href="/specificarticlepage.html"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?" /></a>
         </section>
         <section class="double-articlecard-second">
-          <a href="/specificarticlepage.html"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
-          <a href="/specificarticlepage.html"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
+          <a href="/specificarticlepage.html"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.webp" alt="To piger med forskellige kropstyper" /></a>
+          <a href="/specificarticlepage.html"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.webp" alt="To hænder: én holder en banen og en anden en dildo" /></a>
         </section>
       </div>
       <div class="medier-podcast-section">
