--- a/src/pages/meettheteam.astro
+++ b/src/pages/meettheteam.astro
@@ -24,12 +24,14 @@ import EmployeeCard from "../components/cards/EmployeeCard.astro";
         name="Anna Bjerre"
         title="Direktør"
         email="Anna@Girltalk.dk"
+        alt="Billede af Anna Bjerre"
       />
       <EmployeeCard
         link="/images/meettheteam/MajbritBay.webp"
         name="Majbritt Bay"
         title="Souschef"
         email="Majbritt@Girltalk.dk"
+        alt="Billede af Majbritt Bay"
       />
     </div>
 
@@ -40,18 +42,21 @@ import EmployeeCard from "../components/cards/EmployeeCard.astro";
         name="Nanna Bohmann"
         title="Teamleder, Kommunikation og Engagement"
         email="Nanna@Girltalk.dk"
+        alt="Billede af Nanna Bohmann"
       />
       <EmployeeCard
         link="/images/meettheteam/MarianneObed.webp"
         name="Marianne Obed Madsen"
         title="Teamleder, Rådgivningen"
         email="Marianne@Girltalk.dk"
+        alt="Billede af Marianna Obed Madsen"
       />
       <EmployeeCard
         link="/images/meettheteam/DitteWagner.webp"
         name="Ditte Wagner"
         title="Teamleder, Lokale Indsatser"
         email="Ditte@Girltalk.dk"
+        alt="Billede af Ditte Wagner"
       />
     </div>
 
@@ -62,36 +67,42 @@ import EmployeeCard from "../components/cards/EmployeeCard.astro";
         name="Dorte Sørensen"
         title="Administrativ Koordinator"
         email="Dorte@Girltalk.dk"
+        alt="Billede af Dorte Sørensen"
       />
       <EmployeeCard
         link="/images/meettheteam/randomemployee4.webp"
         name="Gitte Solberg Perregaard"
         title="Økonomi- og Administrationskonsulent"
         email="Gitte@Girltalk.dk"
+        alt="Billede af Gitte Solberg Perregaard"
       />
       <EmployeeCard
         link="/images/meettheteam/randomemployee3.webp"
         name="Siri Madsen"
         title="Rådgivningskorrdinator"
         email="Siri@Girltalk.dk"
+        alt="Billede af Siri Madsen"
       />
       <EmployeeCard
         link="/images/meettheteam/randomemployee5.webp"
         name="Katrine Bjerre"
         title="Rådgivnings- og frivilligkoordinator"
         email="Katrine.Bjerre@Girltalk.dk"
+        alt="Billede af Katrine Bjerre"
       />
       <EmployeeCard
         link="/images/meettheteam/AmalieStender.webp"
         name="Amalie Stender"
         title="Kommunikation og engagement"
         email="Amalie@Girltalk.dk"
+        alt="Billede af Amalie Stender"
       />
       <EmployeeCard
         link="/images/meettheteam/MathildeMGraulund.webp"
         name="Mathilde Magrethe Graulund"
         title="Kommunikation og engagement"
         email="Mathilde@Girltalk.dk"
+        alt="Mathilde Maghrete Graulund"
       />
     </div>
     <h2 class="sub-header-underlined">Sekretariat Odense</h2>
@@ -100,13 +111,16 @@ import EmployeeCard from "../components/cards/EmployeeCard.astro";
         link="/images/meettheteam/MetteRafn.webp"
         name="Mette Rafn"
         title="kommunikation og Engagement"
-        email="Anna@Girltalk.dk"
+        email="Mette@Girltalk.dk"
+        alt="Billede af Mette Rafn"
       />
       <EmployeeCard
         link="/images/meettheteam/AnetteBreinholt.webp"
         name="Anette Breinholt"
         title="Projektkonsulent, Rådgivningerne"
-        email="Majbritt@Girltalk.dk"
+        email="Anette@Girltalk.dk"
+        alt="Billede af Anette Breinholt"
+
       />
     </div>
     <h2 class="sub-header-underlined">Sekretariat Aalborg</h2>
@@ -115,13 +129,15 @@ import EmployeeCard from "../components/cards/EmployeeCard.astro";
         link="/images/meettheteam/MaikeRitter.webp"
         name="Maike Ritter"
         title="Studentermedarbejder, Rådgivningerne"
-        email="Anna@Girltalk.dk"
+        email="Maike@Girltalk.dk"
+        alt="Billede af Maike Ritter"
       />
       <EmployeeCard
         link="/images/meettheteam/randomemployee2.webp"
         name="Emilie Espholm"
         title="Projektkoordinator, Lokale Indsatser"
         email="Emilie@Girltalk.dk"
+        alt="Billede af Emilie Espholm"
       />
     </div>
   </div>
