--- a/src/pages/stot.astro
+++ b/src/pages/stot.astro
@@ -27,7 +27,7 @@ import ButtonDonate from "../components/ui/ButtonDonate.astro";
 
       <div class="donate-form">
         <form>
-          <p class="subheader">Hjælp os med at give alle piger en at tale med.</p>
+          <h2 class="subheader">Hjælp os med at give alle piger en at tale med.</h2>
           <div class="donate-subsection">
             <p class="light-text">Vælg hvor meget du vil støtte med</p>
             <div class="button-container">
