--- a/src/components/ui/SearchBar.astro
+++ b/src/components/ui/SearchBar.astro
@@ -1,6 +1,6 @@
 <form class="search-container">
     <input type="text" id="search-bar" placeholder="Søg efter...">
-    <a href="#"><img class="search-icon" src="http://www.endlessicons.com/wp-content/uploads/2012/12/search-icon.png"></a>
+    <a href="#"><img class="search-icon" alt="search icon" src="http://www.endlessicons.com/wp-content/uploads/2012/12/search-icon.png"></a>
 </form>
 
   <style>
