--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,7 @@ import BoxColorButton from "../components/ui/BoxColorButton.astro";
     </section>
     <div class="BoxColorButtonCenter">
       <BoxColorButton size="m-extra-small-d-medium" title="Har du tanker, der fylder?" color="purple" text="Start anonym chat">
+        <h2 class="subheader" slot="title">Har du tanker, der fylder?</h2>
         <p slot="description">Vi sidder klar til at hjælpe dig</p>
       </BoxColorButton>
     </div>
@@ -26,8 +27,8 @@ import BoxColorButton from "../components/ui/BoxColorButton.astro";
           <a href="#"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?" /></a>
         </section>
         <section class="double-articlecard-second">
-          <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.webp" /></a>
-          <a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.webp" /></a>
+          <a href="/specificarticlepage.html"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.webp" alt="To piger med forskellige kropstyper" /></a>
+          <a href="/specificarticlepage.html"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.webp" alt="To hænder: én holder en banen og en anden en dildo" /></a>
         </section>
       </div>
     </div>
