corrected navigation links

--- a/src/components/ui/NavPrimary.astro
+++ b/src/components/ui/NavPrimary.astro
@@ -25,7 +25,7 @@ const navLinks = [{
 <nav class="NavPrimary"> 
 
 <div class="nav-primary-logo">
-    <div class="logo"><a href="index.html"><img src="images/logo.png" alt="GirlTalk Logo"></a></div>
+    <div class="logo"><a href="/index.html"><img src="/images/logo.png" alt="GirlTalk Logo"></a></div>
 <div class="search-flex">
     <div class="search-container">
         <form action="/search" method="get">
@@ -45,7 +45,7 @@ const navLinks = [{
 </nav>
 
 <div class="NavPrimaryMobile"> 
-  <div class="mobilelogo"><a href="index.html"><img src="images/logo.png" alt=""></a></div>
+  <div class="mobilelogo"><a href="/index.html"><img src="/images/logo.png" alt=""></a></div>
     <input id="toggle" type="checkbox"></input>
 
     <label for="toggle" class="hamburger">
@@ -60,12 +60,12 @@ const navLinks = [{
         <nav>
 	
             <ul class="nav-links">
-                <li><a href="index.html">Forside</a></li>
-                <li><a href="om-os.html">Om os</a></li>
-                <li><a href="stot.html">Støt</a></li>
-                <li><a href="frivillig.html">Bliv frivillig</a></li>
-                <li><a href="foraeldre.ht">Forældre</a></li>
-        <li class="last-mobile-link"> <a href="main.html">Pigeunivers</a></li>
+                <li><a href="/index.html">Forside</a></li>
+                <li><a href="/om-os.html">Om os</a></li>
+                <li><a href="/stot.html">Støt</a></li>
+                <li><a href="/frivillig.html">Bliv frivillig</a></li>
+                <li><a href="/foraeldre.ht">Forældre</a></li>
+        <li class="last-mobile-link"> <a href="/main.html">Pigeunivers</a></li>
         
             </ul>
         
