--- a/src/components/ui/NavSecondary.astro
+++ b/src/components/ui/NavSecondary.astro
@@ -24,7 +24,7 @@ const navLinks = [{
 <nav class="NavPrimary"> 
 
 <div class="nav-primary-logo">
-    <div class="logo"><a href="index.html"><img class="pigelogo" src="images/Pigeunivers_logo.png" alt="Pigeunivers by GirlTalk"></a></div>
+    <div class="logo"><a href="/main.html"><img class="pigelogo" src="/images/Pigeunivers_logo.png" alt="Pigeunivers by GirlTalk"></a></div>
     <div class="search-container">
         <form action="/search" method="get">
           <input class="search expandright" id="searchright" type="search" name="q" placeholder="Search">
@@ -42,7 +42,7 @@ const navLinks = [{
 </nav>
 
 <div class="NavPrimaryMobile"> 
-  <div class="mobilelogo"><img class="pigelogo" src="images/Pigeunivers_logo.png" alt=""></a></div>
+  <div class="mobilelogo"><img class="pigelogo" src="/images/Pigeunivers_logo.png" alt=""></a></div>
     <input id="toggle" type="checkbox"></input>
 
     <label for="toggle" class="hamburger">
@@ -57,10 +57,10 @@ const navLinks = [{
         <nav>
 	
             <ul class="nav-links">
-                <li><a href="chat.html">Chat</a></li>
-                <li><a href="brevkasse.html">Brevkasse</a></li>
-                <li><a href="faelleskaber.html">Fælleskaber</a></li>
-                <li><a href="medier.html">Medier</a></li>
+                <li><a href="/chat.html">Chat</a></li>
+                <li><a href="/brevkasse.html">Brevkasse</a></li>
+                <li><a href="/faelleskaber.html">Fælleskaber</a></li>
+                <li><a href="/medier.html">Medier</a></li>
         <li class="last-mobile-link"> <a href="index.html">GirlTalk</a></li>
         
             </ul>
