--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -24,19 +24,20 @@ import Button from "./Button.astro";
   <section class="bottom_section">
     <div class="footer-links-container footer_links">
       <ul>
-        <li><a href="index.html">Forside</a></li>
-        <li><a href="om-os.html">Om os</a></li>
-        <li><a href="frivillig.html">Frivillig</a></li>
-        <li><a href="foraeldre.html">Forældre</a></li>
-        <li><a href="main.html">Pigeunivers</a></li>
-        <li><a href="faq.html">FAQ</a></li>
+        <li><a href="/index.html">Forside</a></li>
+        <li><a href="/om-os.html">Om os</a></li>
+        <li><a href="/frivillig.html">Frivillig</a></li>
+        <li><a href="/foraeldre.html">Forældre</a></li>
+        <li><a href="/main.html">Pigeunivers</a></li>
+        <li><a href="/faq.html">FAQ</a></li>
+        <li><a href="#">Vilkår ogrivatlivspolitik</a></li>
       </ul>
       <ul>
-        <li><a href="main.html">Pigeunivers</a></li>
-        <li><a href="chat.html">Chat</a></li>
-        <li><a href="brevkasse.html">Brevkasse</a></li>
-        <li><a href="faellesskaber.html">Fællesskaber</a></li>
-        <li><a href="medier.html">Medier</a></li>
+        <li><a href="/main.html">Pigeunivers</a></li>
+        <li><a href="/chat.html">Chat</a></li>
+        <li><a href="/brevkasse.html">Brevkasse</a></li>
+        <li><a href="/faellesskaber.html">Fællesskaber</a></li>
+        <li><a href="/medier.html">Medier</a></li>
       </ul>
     </div>
 
