making footer input transparent

--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -88,7 +88,7 @@ import Button from "./Button.astro";
     padding: 10px;
     border-radius: 8px;
     border: 1px var(--color-black-ish) solid;
-    background-color: rgb(255, 228, 238, 0.5);
+    background-color: transparent;
   }
 
   input[type="submit"] {
