--- a/src/components/ui/NavPrimary.astro
+++ b/src/components/ui/NavPrimary.astro
@@ -45,7 +45,7 @@ const navLinks = [{
 </nav>
 
 <div class="NavPrimaryMobile"> 
-  <div class="mobilelogo"><a href="/index.html"><img src="/images/logo.png" alt=""></a></div>
+  <div class="mobilelogo"><a href="/index.html"><img src="/images/logo.png" alt="GirlTalk Logo"></a></div>
     <input id="toggle" type="checkbox"></input>
 
     <label for="toggle" class="hamburger">
