--- a/src/components/ui/NavSecondary.astro
+++ b/src/components/ui/NavSecondary.astro
@@ -42,7 +42,7 @@ const navLinks = [{
 </nav>
 
 <div class="NavPrimaryMobile"> 
-  <div class="mobilelogo"><img class="pigelogo" src="/images/Pigeunivers_logo.png" alt=""></a></div>
+  <div class="mobilelogo"><img class="pigelogo" src="/images/Pigeunivers_logo.png" alt="Pigeunivers by GirlTalk.Dk logo"></a></div>
     <input id="toggle" type="checkbox"></input>
 
     <label for="toggle" class="hamburger">
