--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -30,7 +30,7 @@ import Button from "./Button.astro";
         <li><a href="/foraeldre.html">Forældre</a></li>
         <li><a href="/main.html">Pigeunivers</a></li>
         <li><a href="/faq.html">FAQ</a></li>
-        <li><a href="#">Vilkår ogrivatlivspolitik</a></li>
+        <li><a href="#">Privatlivspolitik</a></li>
       </ul>
       <ul>
         <li><a href="/main.html">Pigeunivers</a></li>
