added row to footer

--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -30,7 +30,7 @@ import Button from "./Button.astro";
         <li><a href="/foraeldre.html">Forældre</a></li>
         <li><a href="/main.html">Pigeunivers</a></li>
         <li><a href="/faq.html">FAQ</a></li>
-        <li><a href="#">Privatlivspolitik</a></li>
+      
       </ul>
       <ul>
         <li><a href="/main.html">Pigeunivers</a></li>
@@ -38,6 +38,10 @@ import Button from "./Button.astro";
         <li><a href="/brevkasse.html">Brevkasse</a></li>
         <li><a href="/faellesskaber.html">Fællesskaber</a></li>
         <li><a href="/medier.html">Medier</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">Privatlivspolitik</a></li>
+        <li><a href="/sitemap.html">Sitemap</a></li>
       </ul>
     </div>
 
@@ -161,5 +165,11 @@ import Button from "./Button.astro";
     .first_footer_div {
       width: 100%;
     }
+
+    .footer-links-container {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
   }
 </style>
