--- a/src/pages/main.astro
+++ b/src/pages/main.astro
@@ -25,11 +25,12 @@ import Button from "../components/ui/Button.astro";
       </div>
     </div>
 
-    <div class="fp-quote-section">
+    <div class="fp-quote-section"> 
+ 
       <QuoteSection color="pink" firstLine="Man føler sig ikke alene med de ting" secondLine="man kæmper med, når andre fortæller," thirdLine="de har det på samme måde" />
-      <div class="button-wrapper">
+            <div class="button-wrapper">
         <Button size="m-extra-small-d-medium" text="Gå til fællesskaber" />
-      </div>
+      </div> 
     </div>
     <div class="BoxColorButtonCenter">
       <BoxColorButton size="m-extra-small-d-medium" color="purple" text="Skriv til brevkassen">
@@ -47,6 +48,7 @@ import Button from "../components/ui/Button.astro";
     flex-direction: column;
     justify-content: center;
     gap: 40px;
+    padding: 30px 20px;
   }
 
   /*HEROSECTION*/
@@ -108,6 +110,8 @@ import Button from "../components/ui/Button.astro";
   .fp-quote-section {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 20px;
   }
 
@@ -115,24 +119,32 @@ import Button from "../components/ui/Button.astro";
 
   .button-wrapper {
     display: flex;
-    align-self: flex-end;
+    height: fit-content;
+
   }
 
-  .BoxColorButtonCenter {
-    align-self: center;
-    display: flex;
-  }
+.BoxColorButtonCenter{
+  display: flex;
+  justify-content: center;
+}
 
   @media only screen and (min-width: 712px) {
     .medier-second-grid {
       display: grid;
       grid-template-columns: 1fr 1fr;
     }
+
+    .BoxColorButtonCenter {
+padding: 40px;
+ 
+  }
+
   }
 
   @media only screen and (min-width: 1100px) {
     .fp-quote-section {
-      padding: 0px 100px;
+      padding-top: 40px;
+      padding-bottom:40px ;
     }
 
     .button-wrapper {
@@ -142,5 +154,7 @@ import Button from "../components/ui/Button.astro";
     .girls-frontpage-layout {
       padding: 40px 140px;
     }
+
+
   }
 </style>
