--- a/src/components/ui/NavSecondary.astro
+++ b/src/components/ui/NavSecondary.astro
@@ -118,13 +118,13 @@ box-shadow: 0 3px 10px rgb(255 228 238 / 0.50);
 
 .logo{
 position: absolute;
-width: auto;
+width: 200px;
 margin: auto;
 }
 
 
 .pigelogo{
-    height: 35px;
+    width: 100%;
 }
 .search-container {
 	position: relative;
