--- a/src/components/ui/NavSecondary.astro
+++ b/src/components/ui/NavSecondary.astro
@@ -104,6 +104,7 @@ ul li:last-child {
         justify-content: space-around;
         list-style: none;
         padding-bottom: 20px;
+        z-index: 5;
     }
     
 
@@ -120,6 +121,7 @@ box-shadow: 0 3px 10px rgb(255 228 238 / 0.50);
 position: absolute;
 width: 200px;
 margin: auto;
+z-index: 0;
 }
 
 
