--- a/src/pages/faellesskaber.astro
+++ b/src/pages/faellesskaber.astro
@@ -212,5 +212,15 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
     .header-container {
       margin-bottom: 90px;
     }
+
+
+  }
+
+  }
+
+  @media only screen and (max-width: 800px) {
+    .header{
+      grid-template-rows: 1fr 1fr;
+    }
   }
 </style>
