--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -22,7 +22,7 @@ import Button from "./Button.astro";
     </div>
   </section>
   <section class="bottom_section">
-    <div class="footer-links-container footer_links">
+    <div class="footer-links-container footer-links">
       <ul>
         <li><a href="/index.html">Forside</a></li>
         <li><a href="/om-os.html">Om os</a></li>
@@ -134,8 +134,36 @@ import Button from "./Button.astro";
 
   .footer-links-container ul {
     list-style: none;
+display:flex ;
+flex-direction: column;
+gap: 10px;
     padding-right: 1rem;
   }
+
+ .footer-links a {
+	color: var(--color-black-ish);
+  position: relative;
+  text-decoration: none;
+}
+
+.footer-links a::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 1.5px;
+  border-radius: 4px;
+  background-color: var(--color-black-ish);
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .3s ease-in-out;
+}
+
+.footer-links a:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
+}
 
   .footer_contact {
     display: flex;
