--- a/src/pages/chat.astro
+++ b/src/pages/chat.astro
@@ -4,7 +4,7 @@ import ColorSection from "../components/ui/ColorSection.astro"
 
 
 ---
-<GirlsUniLayout title="Pigeunivers">
+<GirlsUniLayout title="Chat">
 <div class="chatlayout">
 <!-- <div class="popup">
 	<span class="popuptext" id="myPopup">A Simple Popup!</span></div>	 -->
