--- a/src/pages/stot.astro
+++ b/src/pages/stot.astro
@@ -4,7 +4,7 @@ import Button from "../components/ui/Button.astro";
 import ButtonDonate from "../components/ui/ButtonDonate.astro";
 ---
 
-<BaseLayout title="Stot">
+<BaseLayout title="Støt">
   <div class="Stot">
     <div class="grid-container">
       <div>
