--- a/src/pages/foraeldre.astro
+++ b/src/pages/foraeldre.astro
@@ -6,7 +6,7 @@ import SearchBar from "../components/ui/SearchBar.astro";
 import BrevkasseCard from "../components/cards/BrevkasseCard.astro";
 ---
 
-<BaseLayout title="Parents">
+<BaseLayout title="Forældre">
   <section>
     <div class="mobilehero">
       <h1 class="primary-header">Forældre</h1>
