--- a/src/pages/main.astro
+++ b/src/pages/main.astro
@@ -6,7 +6,7 @@ import ArticleCard from "../components/cards/ArticleCard.astro";
 import Button from "../components/ui/Button.astro";
 ---
 
-<GirlsUniLayout title="Pigeunivers">
+<GirlsUniLayout title="Pigeunivers, GirlTalk.dk">
   <div class="girls-frontpage-layout">
     <section class="gu-herosection">
       <img src="/images/heroimages/girlsfrontpage.webp" alt="Pigeunivers billede og overskrift" />
