--- a/src/pages/medier.astro
+++ b/src/pages/medier.astro
@@ -5,7 +5,7 @@ import SearchBar from "../components/ui/SearchBar.astro";
 import Dropdown from "../components/ui/Dropdown.astro";
 ---
 
-<GirlsUniLayout title="Pigeunivers">
+<GirlsUniLayout title="Medier">
   <div class="medierlayout">
     <h1 class="primary-header">Vidensunivers</h1>
     <div class="search-div">
