removed commenting out in foraeldre

--- a/src/pages/foraeldre.astro
+++ b/src/pages/foraeldre.astro
@@ -4,7 +4,7 @@ import BoxColorButton from "../components/ui/BoxColorButton.astro";
 import Button from "../components/ui/Button.astro";
 import SearchBar from "../components/ui/SearchBar.astro";
 import BrevkasseCard from "../components/cards/BrevkasseCard.astro";
-/*const supabaseUrl = 'https://vrnvjrlmumgaywbxvaqv.supabase.co/rest/v1/brevkasse-parents'
+const supabaseUrl = 'https://vrnvjrlmumgaywbxvaqv.supabase.co/rest/v1/brevkasse-parents'
 const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZybnZqcmxtdW1nYXl3Ynh2YXF2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE2ODUzODcwNDIsImV4cCI6MjAwMDk2MzA0Mn0.zWbD-YJqJP0ZuJDFHvhqG6JoxRoqVR79RP2mTmp71BQ'
 const res = await fetch(supabaseUrl, {
         method: 'GET',
@@ -15,7 +15,7 @@ const res = await fetch(supabaseUrl, {
           Prefer: 'return=representation'
         }
       });
-    const data = await res.json();*/
+    const data = await res.json();
 ---
 
 <BaseLayout title="Parents">
@@ -101,11 +101,11 @@ const res = await fetch(supabaseUrl, {
         <SearchBar />
       </div>
       <div>
-           <!--  <p class="indicator">{data.length} af {data.length}</p>
+           <p class="indicator">{data.length} af {data.length}</p>
         <div class="lettercontainer">
-          /*{data.map((letter) => 
+          {data.map((letter) => 
           <BrevkasseCard category={letter.category} filter={letter.category.toLowerCase().replace(/\s/g, "_")} header={letter.title} href="/specificletter" />)}
-              </div> -->
+              </div>
         <div class="margintop button-container">
           <Button text="Læs flere" />
         </div>
