--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -63,8 +63,8 @@ import Button from "./Button.astro";
     <a href="https://www.facebook.com/GirlTalkdk"> <img src="/facebook.svg" alt="facebook" /></a>
     <a href="https://www.instagram.com/girltalkdk/"> <img src="/instagram.svg" alt="instagram" /></a>
     <a href="https://www.tiktok.com/@girltalkdk"> <img src="/tiktok.svg" alt="tiktok" /></a>
-    <a href="https://www.youtube.com/channel/UCYMPMeYqeojUzmiplzk78sg"> <img src="youtube.svg" alt="youtube" /></a>
-    <a href="https://www.linkedin.com/company/girltalk.dk/mycompany/"> <img src="linkedin.svg" alt="linkedin" /></a>
+    <a href="https://www.youtube.com/channel/UCYMPMeYqeojUzmiplzk78sg"> <img src="/youtube.svg" alt="youtube" /></a>
+    <a href="https://www.linkedin.com/company/girltalk.dk/mycompany/"> <img src="/linkedin.svg" alt="linkedin" /></a>
   </section>
 </footer>
 
