--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import BoxColorButton from "../components/ui/BoxColorButton.astro";
       <img src="/images/heroimages/girls-on-stairs-1.webp" alt="Image with text." />
     </section>
     <div class="BoxColorButtonCenter">
-      <BoxColorButton size="m-extra-small-d-medium" title="Har du tanker, der fylder?" color="purple" text="Start anonym chat">
+      <BoxColorButton size="m-extra-small-d-medium" title="Har du tanker, der fylder?" color="purple" text="Start anonym chat" link="/chat">
         <h2 class="subheader" slot="title">Har du tanker, der fylder?</h2>
         <p slot="description">Vi sidder klar til at hjælpe dig</p>
       </BoxColorButton>
@@ -41,14 +41,11 @@ import BoxColorButton from "../components/ui/BoxColorButton.astro";
           det, der er svært. I samarbejde med vores mange støtter og samarbejdspartnere arbejder vi for at bremse den udvikling og for at sikre, at alle piger har en at tale med.
         </p>
         <div class="button-wrapper">
-          <Button class="buttonpadding" size="m-extra-small-d-medium" text="Læs mere om os" />
+          <Button class="buttonpadding" size="m-extra-small-d-medium" text="Læs mere om os" link="/om-os" />
         </div>
       </section>
       <section class="bottom-section-image">
         <img src="/images/heroimages/girls-on-stairs-2.webp" alt="Decorative image" />
-        <div class="button-wrapper">
-          <Button text="Læs mere om os" />
-        </div>
       </section>
     </div>
   </div>
