--- a/src/pages/main.astro
+++ b/src/pages/main.astro
@@ -29,11 +29,11 @@ import Button from "../components/ui/Button.astro";
  
       <QuoteSection color="pink" firstLine="Man føler sig ikke alene med de ting" secondLine="man kæmper med, når andre fortæller," thirdLine="de har det på samme måde" />
             <div class="button-wrapper">
-        <Button size="m-extra-small-d-medium" text="Gå til fællesskaber" />
+        <Button size="m-extra-small-d-medium" text="Gå til fællesskaber" link="/faellesskaber" />
       </div> 
     </div>
     <div class="BoxColorButtonCenter">
-      <BoxColorButton size="m-extra-small-d-medium" color="purple" text="Skriv til brevkassen">
+      <BoxColorButton size="m-extra-small-d-medium" color="purple" text="Skriv til brevkassen" link="/brevkasse">
         <h2 class="subheader" slot="title">Du er aldrig alene med dine tanker</h2>
         <p slot="description">Har du nogle tanker, du har brug for at få ud af hovedet, så de fylder mindre?</p>
       </BoxColorButton>
