--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -163,7 +163,7 @@ a {
 /* FILTERING BUTTON STYLES */
 
 .selected {
-  background-color: #d1ff99;
+  background-color: #d1ff99 !important;
   box-shadow: var(--shadow-hover);
 }
 
