fixed linking in burger menu

--- a/src/components/ui/NavPrimary.astro
+++ b/src/components/ui/NavPrimary.astro
@@ -64,7 +64,7 @@ const navLinks = [{
                 <li><a href="/om-os.html">Om os</a></li>
                 <li><a href="/stot.html">Støt</a></li>
                 <li><a href="/frivillig.html">Bliv frivillig</a></li>
-                <li><a href="/foraeldre.ht">Forældre</a></li>
+                <li><a href="/foraeldre.html">Forældre</a></li>
         <li class="last-mobile-link"> <a href="/main.html">Pigeunivers</a></li>
         
             </ul>
