added typeform on foraeldre

--- a/src/pages/foraeldre.astro
+++ b/src/pages/foraeldre.astro
@@ -65,7 +65,8 @@ const res = await fetch(supabaseUrl + "/rest/v1/brevkasse-parents", {
         color="purple"
         text="book rådgivning"
         style="dark"
-        size="m-small-d-large">
+        size="m-small-d-large"
+        link="https://jpmpz0xim6i.typeform.com/to/x0qzx9Ej">
         <span class="width"></span>
       <h2 class="subheader" slot="title">Telefonrådgivning</h2>
         <p slot="description">
